--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <!-- メインヘッダー（サイトのロゴ、タイトルなどの情報を記載する場所） -->
     <header class="text-center" id="main-header">
       <nav class="navbar navbar-expand-lg navbar-light bg-warning py-3">
-        <a class="navbar-brand" href="#"><h2>TapiSpot</h2></a>
+        <a class="navbar-brand" href="#"><h2>SchoolAdmin</h2></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">マイページ</a>
+              <a class="nav-link" href="#">一覧表示</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">コメント</a>
+              <a class="nav-link" href="#">追加</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">人気ランキング</a>
+              <a class="nav-link" href="#">編集</a>
             </li>
           </ul>
           <!-- <form class="form-inline my-2 my-lg-0"> -->
